--- a/index.html
+++ b/index.html
@@ -6,28 +6,53 @@
     <title>Hire Me</title>
     <!-- boostrap stylesheet -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!-- css stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- header section -->
     <header class="header-section p-3 position-absolute start-0 top-0 end-0">
-<div class="d-flex justify-content-between align-items-center">
-<a href="/" class="text-decoration-none fs-5 fw-bold ">Hire Me</a>
-<div>
-    <button>
+        <div class="d-flex justify-content-between align-items-center">
+        <a href="/" class="text-decoration-none fs-5 fw-bold text-light ">Hire Me</a>
+        <div class="">
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                <a class="nav-link text-light " aria-current="page" href="#">Home </a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link text-light " href="#">Jobs</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link text-light " href="#">About Us </a>
+                </li>
+                <li class="nav-item">
+                    <button class="btn btn-primary text-light bg-dark" type="button">Post a job</button>
+                </li>
+            </ul>
+        </div>
+        </div>
 
-    </button>
-</div>
-</div>
-
-    </header>
-    <!-- boostrap js -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-<!-- normal js -->
-<script src="script.js"></script>
+        </header>
+        <!-- video home page section -->
+        <section class="video">
+        <div class="video-container">
+            <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" loading="lazy" class="video-section">
+               <source src="./videos/production_id_4300496 (720p).mp4" type="video/mp4">
+            </video>
+        </div>
+            <div class="video-text ">
+                <p class="lead text-center ">We pair  Developers with established startups around the world. 
+                    Build world-changing products while staying in other country.</p>
+            </div>
+            <div class="video-h1">
+                <h1 class="">WORK DIRECTLY WITH TOP COMPANIES AROUND THE WORLD</h1>
+            </div>
+        </section>
+        <!-- boostrap js -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <!-- normal js -->
+    <script src="script.js"></script>
 
 </body>
 </html>
