added an about section with an Id

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                 <h1 class="">WORK DIRECTLY WITH TOP COMPANIES AROUND THE WORLD</h1>
             </div>
         </section>
+        <!-- about section  -->
+        <div class=" about-section d-flex justify-content-evenly">
+            <h1>Built with your well-being in mind.</h1>
+        </div>
         <!-- boostrap js -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <!-- normal js -->
