--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
             </div>
         </section>
         <!-- about section  -->
-        <div class=" about-section d-flex justify-content-evenly">
-            <h1>Built with your well-being in mind.</h1>
+        <div class=" about-section d-flex justify-content-around align-items-center">
+            <h1 class="ms-5">Built with your well being in mind.</h1>
+            <p class="me-5">hire me connects Developers around the world with ambitious  tech companies, 
+                knowing that software engineers want to develop world-class products while maximizing career growth.</p>
         </div>
         <!-- boostrap js -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
