added a team section with an image

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             <p class="me-5">hire me connects Developers around the world with ambitious  tech companies, 
                 knowing that software engineers want to develop world-class products while maximizing career growth.</p>
         </div>
+        <!-- team section  -->
+        <div class="team">
+            <img class= "img-fluid rounded"src="./images/pexels-fauxels-3184418.jpg" alt="people's hands on top of each other">
+        </div>
         <!-- boostrap js -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <!-- normal js -->
