--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
         <div class="team">
             <img class= "img-fluid rounded"src="./images/pexels-fauxels-3184418.jpg" alt="people's hands on top of each other">
         </div>
+        <!-- about section part 2 -->
+        <div class=" about-section d-flex justify-content-around align-items-center">
+            <h1 class="ms-5">It’s all about the people.</h1>
+            
+            <p class="me-5" >“Hire me “
+                 connects Developers around the world a with ambitious US tech companies, knowing that software engineers want to develop world-class products while maximizing career growth”</p>
+            <a href="#"><i class="fa-solid fa-arrow-right-long"></i>Apply Now</a>
+        </div>
         <!-- boostrap js -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <!-- normal js -->
