added a footer section

--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
                  connects Developers around the world a with ambitious US tech companies, knowing that software engineers want to develop world-class products while maximizing career growth”</p>
             <a href="#"><i class="fa-solid fa-arrow-right-long"></i>Apply Now</a>
         </div>
+        <!-- footer section -->
+        <section>
+            <div class="d-flex justify-content-evenly">
+                <div class="icons"></div>
+                <div></div>
+                <div></div>
+            </div>
+        </section>
         <!-- boostrap js -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <!-- normal js -->
