--- a/index.html
+++ b/index.html
@@ -68,13 +68,32 @@
             <a href="#"><i class="fa-solid fa-arrow-right-long"></i>Apply Now</a>
         </div>
         <!-- footer section -->
-        <section>
-            <div class="d-flex justify-content-evenly">
-                <div class="icons"></div>
-                <div></div>
-                <div></div>
+        <footer class="footer-section  text-light p-3">
+            <div class="container d-flex justify-content-between">
+                <div>
+                    <h5>CopyRight@2023 HireMe.com</h5>
+                    <p>All Rights Reserved</p>
+                </div>
+                <div>
+                    <h5>Contact</h5>
+                    <ul>
+                        <li><i class="fas fa-map-marker-alt"></i> 123 Street, California,USA</li>
+                        <li><i class="fas fa-envelope"></i> hireme@gmail.com</li>
+                        <li><i class="fas fa-phone"></i> +1 234 567 890</li>
+                    </ul>
+                </div>
+                <div>
+                    <h5>Follow Us</h5>
+                    <div class="social-icons ">
+                        <a href="#"><i class="fab fa-facebook mx-2"></i></a>
+                        <a href="#"><i class="fab fa-twitter me-2"></i></a>
+                        <a href="#"><i class="fab fa-instagram me-2"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
             </div>
-        </section>
+        </footer>
+        
         <!-- boostrap js -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <!-- normal js -->
