--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Hire Me</title>
     <!-- boostrap stylesheet -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"/>
     <!-- css stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- header section -->
-    <header class="header-section p-3 position-absolute start-0 top-0 end-0">
+    <header class="header-section p-3 position-absolute start-0 top-0 end-0 sticky-top">
         <div class="d-flex justify-content-between align-items-center">
         <a href="/" class="text-decoration-none fs-5 fw-bold text-light ">Hire Me</a>
         <div class="">
