--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a class="nav-link text-light " aria-current="page" href="#">Home </a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link text-light " href="#">Jobs</a>
+                <a class="nav-link text-light " href="./jobs.html" target="_blank">Jobs</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link text-light " href="#">About Us </a>
