added a contact us link on the header section

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
                 <a class="nav-link text-light " href="./jobs.html" target="_blank">Jobs</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link text-light " href="#">About Us </a>
+                <a class="nav-link text-light " href="#about">About Us </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-light " href="#contact">Contact Us </a>
+                    </li>
                 <li class="nav-item">
                     <button class="btn btn-primary text-light bg-dark" type="button">Post a job</button>
                 </li>
@@ -50,7 +53,7 @@
             </div>
         </section>
         <!-- about section  -->
-        <div class=" about-section d-flex justify-content-around align-items-center">
+        <div id ="about" class=" about-section d-flex justify-content-around align-items-center">
             <h1 class="ms-5">Built with your well being in mind.</h1>
             <p class="me-5">hire me connects Developers around the world with ambitious  tech companies, 
                 knowing that software engineers want to develop world-class products while maximizing career growth.</p>
@@ -68,7 +71,7 @@
             <a href="#"><i class="fa-solid fa-arrow-right-long"></i>Apply Now</a>
         </div>
         <!-- footer section -->
-        <footer class="footer-section  text-light p-3">
+        <footer id="contact" class="footer-section  text-light p-3">
             <div class="container d-flex justify-content-between">
                 <div>
                     <h5>CopyRight@2023 HireMe.com</h5>
