--- a/jobs.html
+++ b/jobs.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>available jobs </title>
+    <!-- boostrap stylesheet  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"/>
+    <!-- css stylesheet -->
+    <link rel="stylesheet" href="jobs.css">
 </head>
 <body>
+    <h1>Available Jobs</h1>
+    <form id="jobSearchForm">
+        <input type="text" id="roleInput" placeholder="Enter job role">
+        <button type="submit">Search</button>
+    </form>
+    <div id="jobList"></div>
     <script src="script.js"></script>
 </body>
 </html>
