--- a/jobs.html
+++ b/jobs.html
@@ -15,7 +15,9 @@
         <input type="text" id="roleInput" placeholder="Enter job role">
         <button type="submit">Search</button>
     </form>
-    <div id="jobList"></div>
+    <div id="jobList" ></div>
+    <!-- boostrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
