--- a/jobs.html
+++ b/jobs.html
@@ -10,12 +10,14 @@
     <link rel="stylesheet" href="jobs.css">
 </head>
 <body>
-    <h1>Available Jobs</h1>
-    <form id="jobSearchForm">
-        <input type="text" id="roleInput" placeholder="Enter job role">
-        <button type="submit">Search</button>
-    </form>
-    <div id="jobList" ></div>
+    <div class="container">
+        <h1 class="text-center">Available Jobs</h1>
+        <form id="jobSearchForm" class="text-center mb-4">
+            <input type="text" id="roleInput" placeholder="Enter job role">
+            <button type="submit" >Search</button>
+        </form>
+        <div id="jobList" ></div>
+    </div>
     <!-- boostrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="script.js"></script>
