--- a/jobs.html
+++ b/jobs.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center">Available Jobs</h1>
+        <h1 class="text-center mt-5 mb-4">Available Jobs</h1>
         <form id="jobSearchForm" class="text-center mb-4">
             <input type="text" id="roleInput" placeholder="Enter job role">
-            <button type="submit" >Search</button>
+            <button type="submit" class="search-button">Search</button>
         </form>
         <div id="jobList" ></div>
     </div>
