added a class name apply-link to the a tag

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             
             <p class="me-5" >“Hire me “
                  connects Developers around the world a with ambitious US tech companies, knowing that software engineers want to develop world-class products while maximizing career growth”</p>
-            <a href="./jobs.html" target="_blank"><i class="fa-solid fa-arrow-right-long"></i>Apply Now</a>
+            <a href="./jobs.html" target="_blank" class="apply-link"><i class="fa-solid fa-arrow-right-long"></i>Apply Now</a>
         </div>
         <!-- footer section -->
         <footer id="contact" class="footer-section  text-light p-3">
