added a link of going back to the main page

--- a/jobs.html
+++ b/jobs.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="jobs.css">
 </head>
 <body>
+    <a href="./index.html"  class="apply-link mt-4 ms-3"><i class="fa-solid fa-arrow-left-long"></i>Go back</a>
     <div class="container">
         <h1 class="text-center mt-5 mb-4">Available Jobs</h1>
         <form id="jobSearchForm" class="text-center mb-4">
