--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@
                 </div>
             </div>
         </footer>
+        <!-- job posting form  -->
+        <section>
+            <div id="jobPostForm" class="job-post-form" style="display: none;">
+                <h2>Post A Job</h2>
+                <form action="">
+
+                </form>
+            </div>
+        </section>
         
         <!-- boostrap js -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
