added a label and input for the position

--- a/index.html
+++ b/index.html
@@ -100,8 +100,11 @@
         <section>
             <div id="jobPostForm" class="job-post-form" style="display: none;">
                 <h2>Post A Job</h2>
-                <form action="">
-
+                <form action="" id="jobForm">
+                    <div class="mb-3">
+                        <label  class="form-label">Position</label>
+                        <input type="text" class="form-position" id="positionInput" required>
+                    </div>
                 </form>
             </div>
         </section>
