added a label and input for languages

--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@
                         <label  class="form-label">Position</label>
                         <input type="text" class="form-position" id="positionInput" required>
                     </div>
+                    <div class="mb-3">
+                        <label  class="form-label">languages</label>
+                        <input type="text" class="form-languages" id="languagesInput" required>
+                    </div>
+                    <div class="mb-3">
+                        <label  class="form-label">location</label>
+                        <input type="text" class="form-location" id="positionInput" required>
+                    </div>
+                    
                 </form>
             </div>
         </section>
