added an availability label and input

--- a/index.html
+++ b/index.html
@@ -111,7 +111,11 @@
                     </div>
                     <div class="mb-3">
                         <label  class="form-label">location</label>
-                        <input type="text" class="form-location" id="positionInput" required>
+                        <input type="text" class="form-location" id="locationInput" required>
+                    </div>
+                    <div class="mb-3">
+                        <label  class="form-label">Availability</label>
+                        <input type="text" class="form-availability" id="availabilityInput" required>
                     </div>
                     
                 </form>
