added a submit button for the form

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <label  class="form-label">Availability</label>
                         <input type="text" class="form-availability" id="availabilityInput" required>
                     </div>
-                    
+                    <button type="submit" class="btn btn-primary text-light bg-dark">SUBMIT</button>
                 </form>
             </div>
         </section>
