added an id to the post a job button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link text-light " href="#contact">Contact Us </a>
                     </li>
                 <li class="nav-item">
-                    <button class="btn btn-primary text-light bg-dark" type="button">Post a job</button>
+                    <button class="btn btn-primary text-light bg-dark" id="postJobButton" type="button">Post a job</button>
                 </li>
             </ul>
         </div>
@@ -117,7 +117,7 @@
                         <label  class="form-label">Availability</label>
                         <input type="text" class="form-availability" id="availabilityInput" required>
                     </div>
-                    <button id ="postJobButton"type="submit" class="btn btn-primary text-light bg-dark">SUBMIT</button>
+                    <button id ="submitJobButton"type="submit" class="btn btn-primary text-light bg-dark">SUBMIT</button>
                 </form>
             </div>
         </section>
