--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link text-light " href="#contact">Contact Us </a>
                     </li>
                 <li class="nav-item">
-                    <button class="btn btn-primary text-light bg-dark" id="postJobButton" type="button">Post a job</button>
+                  <a href="./jobposting.html" class="apply-link" target="_blank" >Post a job</a>
                 </li>
             </ul>
         </div>
