--- a/jobposting.html
+++ b/jobposting.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Job Post</title>
+    <!-- boostrap stylesheet -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"/>
 </head>
 <body>
     <section>
-        <div id="jobPostForm" class="job-post-form" style="display: none;">
+        <div id="jobPostForm" class="job-post-form" >
             <h2>Post A Job</h2>
             <form action="" id="jobForm">
                 <div class="mb-3">
@@ -30,5 +32,9 @@
             </form>
         </div>
     </section>
+    <!-- boostrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <!-- normal js -->
+    <script src="script.js"></script>
 </body>
 </html>
