--- a/jobposting.html
+++ b/jobposting.html
@@ -6,6 +6,7 @@
     <title>Job Post</title>
     <!-- boostrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="jobs.css">
 </head>
 <body>
     <section>
