added a class of form control on all input field

--- a/jobposting.html
+++ b/jobposting.html
@@ -15,19 +15,19 @@
             <form action="" id="jobForm">
                 <div class="mb-3">
                     <label  class="form-label">Position</label>
-                    <input type="text" class="form-position" id="positionInput" required>
+                    <input type="text" class="form-control" id="positionInput" required>
                 </div>
                 <div class="mb-3">
                     <label  class="form-label">languages</label>
-                    <input type="text" class="form-languages" id="languagesInput" required>
+                    <input type="text" class="form-control" id="languagesInput" required>
                 </div>
                 <div class="mb-3">
                     <label  class="form-label">location</label>
-                    <input type="text" class="form-location" id="locationInput" required>
+                    <input type="text" class="form-control" id="locationInput" required>
                 </div>
                 <div class="mb-3">
                     <label  class="form-label">Availability</label>
-                    <input type="text" class="form-availability" id="availabilityInput" required>
+                    <input type="text" class="form-control" id="availabilityInput" required>
                 </div>
                 <button id ="submitJobButton"type="submit" class="btn btn-primary text-light bg-dark">SUBMIT</button>
             </form>
