added a class container-lg on the main div

--- a/jobposting.html
+++ b/jobposting.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section>
-        <div id="jobPostForm" class="job-post-form" >
+        <div id="jobPostForm" class="job-post-form container-lg" >
             <h2>Post A Job</h2>
             <form action="" id="jobForm">
                 <div class="mb-3">
