removed the target blank attribute on the post a job link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link text-light " href="#contact">Contact Us </a>
                     </li>
                 <li class="nav-item">
-                  <a href="./jobposting.html" class="apply-link" target="_blank" >Post a job</a>
+                  <a href="./jobposting.html" class="apply-link"  >Post a job</a>
                 </li>
             </ul>
         </div>
