changed the id of the form to jobpopupform

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </section>
         <!-- post a job form -->
         <section>
-            <div id="jobPostForm" class="job-post-form container-lg" style="display: none;">
+            <div id="jobPopupForm" class="job-post-form  job-popup-form container-lg" style="display: none;">
                 <h2>Post A Job</h2>
                 <form action="" id="jobForm">
                     <div class="mb-3">
@@ -105,6 +105,8 @@
                 </form>
             </div>
         </section>
+        <!-- overlay -->
+       <div id="overlay"></div>
         <!-- footer section -->
         <footer id="contact" class="footer-section mt-5  text-light p-3">
             <div class="container d-flex justify-content-between">
