--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a class="nav-link text-light " aria-current="page" href="#">Home </a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link text-light " href="#jobs">Jobs</a>
+                <a class="nav-link text-light " href="./availablejobs.html" target="_blank">Jobs</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link text-light " href="#about">About Us </a>
@@ -30,7 +30,7 @@
                     <a class="nav-link text-light " href="#contact">Contact Us </a>
                     </li>
                 <li class="nav-item">
-                  <button class="apply-link" id="jobButton">Post a job</button>
+                    <a href="./jobposting.html" class="apply-link" >Post a job</a>
                 </li>
             </ul>
         </div>
@@ -68,43 +68,9 @@
             
             <p class="me-5" >“Hire me “
                  connects Developers around the world a with ambitious US tech companies, knowing that software engineers want to develop world-class products while maximizing career growth”</p>
+                 <a href="./availablejobs.html" target="_blank" class="apply-link"><i class="fa-solid fa-arrow-right-long"></i>Apply Now</a>
          </div>
-        <!-- jobs section -->
-        <section id="jobs" class="mb-5">
-               <div class="container">
-                    <h1 class="text-center mt-5 mb-4">Available Jobs</h1>
-                    <form id="jobSearchForm" class="text-center mb-4">
-                        <input type="text" id="roleInput" placeholder="Enter job role">
-                        <button type="submit" class="search-button">Search</button>
-                    </form>
-            <div id="jobList" ></div>
-            </div>
-        </section>
-        <!-- post a job form -->
-        <section>
-            <div id="jobPopupForm" class="job-post-form  job-popup-form container-lg" style="display: none;">
-                <h2>Post A Job</h2>
-                <form action="" id="jobForm">
-                    <div class="mb-3">
-                        <label  class="form-label">Position</label>
-                        <input type="text" class="form-control" id="positionInput" required>
-                    </div>
-                    <div class="mb-3">
-                        <label  class="form-label">languages</label>
-                        <input type="text" class="form-control" id="languagesInput" required>
-                    </div>
-                    <div class="mb-3">
-                        <label  class="form-label">location</label>
-                        <input type="text" class="form-control" id="locationInput" required>
-                    </div>
-                    <div class="mb-3">
-                        <label  class="form-label">Availability</label>
-                        <input type="text" class="form-control" id="availabilityInput" required>
-                    </div>
-                    <button id ="submitJobButton"type="submit" class="btn btn-primary text-light bg-dark">SUBMIT</button>
-                </form>
-            </div>
-        </section>
+             
         <!-- overlay -->
        <div id="overlay"></div>
         <!-- footer section -->
