removed the target blank attribute from the a tags

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a class="nav-link text-light " aria-current="page" href="#">Home </a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link text-light " href="./availablejobs.html" target="_blank">Jobs</a>
+                <a class="nav-link text-light " href="./availablejobs.html" >Jobs</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link text-light " href="#about">About Us </a>
@@ -68,7 +68,7 @@
             
             <p class="me-5" >“Hire me “
                  connects Developers around the world a with ambitious US tech companies, knowing that software engineers want to develop world-class products while maximizing career growth”</p>
-                 <a href="./availablejobs.html" target="_blank" class="apply-link"><i class="fa-solid fa-arrow-right-long"></i>Apply Now</a>
+                 <a href="./availablejobs.html"  class="apply-link"><i class="fa-solid fa-arrow-right-long"></i>Apply Now</a>
          </div>
              
         <!-- overlay -->
