--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- header section -->
     <header class="header-section p-3 position-absolute start-0 top-0 end-0 sticky-top">
         <div class="d-flex justify-content-between align-items-center">
-        <p  class="text-decoration-none fs-5 fw-bold text-light ">Hire Me</p>
+        <a href ="/"class="text-decoration-none fs-5 fw-bold text-light ">Hire Me</a>
         <div class="">
             <ul class="nav justify-content-end">
                 <li class="nav-item">
