removed the position absolute on the header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- header section -->
-    <header class="header-section p-3 position-absolute start-0 top-0 end-0 sticky-top">
+    <header class="header-section p-3  start-0 top-0 end-0 sticky-top">
         <div class="d-flex justify-content-between align-items-center">
         <a href ="/"class="text-decoration-none fs-5 fw-bold text-light ">Hire Me</a>
         <div class="">
