added a label and input for company name and application link

--- a/jobposting.html
+++ b/jobposting.html
@@ -17,6 +17,10 @@
             <h2>Post A Job</h2>
             <form action="" id="jobForm">
                 <div class="mb-3">
+                    <label  class="form-label">Company Name</label>
+                    <input type="text" class="form-control" id="nameInput" required>
+                </div>
+                <div class="mb-3">
                     <label  class="form-label">Position</label>
                     <input type="text" class="form-control" id="positionInput" required>
                 </div>
@@ -31,6 +35,10 @@
                 <div class="mb-3">
                     <label  class="form-label">Availability</label>
                     <input type="text" class="form-control" id="availabilityInput" required>
+                </div>
+                <div class="mb-3">
+                    <label  class="form-label">Application link</label>
+                    <input type="text" class="form-control" id="linkInput" required>
                 </div>
                 <button id ="submitJobButton"type="submit" class="btn btn-primary text-light bg-dark">SUBMIT</button>
             </form>
